# api

./: .dockerignore  .flake8  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  makefile  poetry.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: black linter.yml  publish to packages-dev.yml  publish to packages.yml
api/api/: settings.py
django_api/django_api/: settings.py  urls.py
django_api/userops/: apps.py  urls.py  views.py
other/: API Github.postman_collection.json  README.md  docker-compose.yml
