[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bal Narendra Sapa <bnsapa2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.django]
optional = true

[tool.poetry.group.fastapi]
optional = true

[tool.poetry.group.django.dependencies]
django = "^4.2.5"


[tool.poetry.group.fastapi.dependencies]
fastapi = "^0.103.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
