[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bal Narendra Sapa <bnsapa2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.django]
optional = true

[tool.poetry.group.fastapi]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.django.dependencies]
django = "^4.2.5"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"


[tool.poetry.group.fastapi.dependencies]
fastapi = {extras = ["all"], version = "^0.103.1"}
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-jose = {extras = ["pycryptodome"], version = "^3.3.0"}
passlib = "^1.7.4"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.21"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
